tests/syntax_error/bad_statement.jou
def main() -> int:
    5  # Error: expected a statement, got an integer
